app/assets/stylesheets/pages/_dashboard.scss
.background-dashboard {
width: 100%;
height: 100%;
background-image: image-url("background-blue-middle.png");
background-size: cover;
}

.wrapper-dashboard {
  padding: 80px 90px;
  min-height: 100vh;
}

.dashboard-left {
  padding: 20px;

}

.dashboard-right {
  padding: 20px;
}

.dashboard-card-left {
  background-color: white;
  border: 4px solid $orange;
  padding: 40px;
  margin: 20px 0px;
  min-height: 200px;
  position: relative;
  text-align: left;
}

.dashboard-card-right {
  background-color: white;
  border: 4px solid $dark-gray;
  padding: 40px;
  margin: 20px 0px;
  min-height: 200px;
  position: relative;
  text-align: left;
}

.dashboard-small-card {
  padding: 10px;
  border-left: 1px dotted $dark-gray;
  margin: 10px 0;
}

.dashboard-subject {
  font-weight: bolder;
}

.sender-request {
  margin-left: 20px;
}

.btn-accept {
  padding: 8px 15px;
  margin: 10px 20px;
  background-color: $accepting-green;
  border-radius: 2px;
  &:hover {
    color: black;
  }
}

.btn-decline {
  padding: 8px 15px;
  margin: 10px 20px;
  background-color: $declining-red;
  border-radius: 2px;
  &:hover {
    color: black;
  }
}

.label-accepted {
  background-color: $accepting-green;
  padding: 2px 5px;
  margin: 0 20px;
}

.label-declined {
  background-color: $declining-red;
  padding: 2px 5px;
  margin: 0 20px;
}

.label-pending {
  background-color: $dark-gray;
  padding: 2px 5px;
  margin: 0 20px;
}

.db-chat-button {
  margin-left: 10px;
}

.dashboard-title{
  color: black;
  text-decoration: none;
  font-size: 18px;
  font-family: $base-font;
  &:hover {
    color: black;
    text-decoration: none;
  }
  a {
    text-decoration: none;
    &:hover {
      text-decoration: none;
    }
  }
}

.dashboard-underline {
  color: orange;
  text-decoration: underline;
  font-size: 18px;
  a {
    text-decoration: none;
    &:hover {
      text-decoration: none;
    }
  }
}

.your_posts {
  text-align: center;
}

